<resources>
    <string name="app_name">DigitalHouse Foods</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="loading_application">Loading application…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authenticate">log in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
</resources>